# cm-http-api

./: main.py  pyproject.toml  readme.md  requirements.txt
cm-http-api/: __init__.py  __main__.py  config.txt
