[tool.poetry]
name = "cm-http-api"
version = "0.1.0"
description = "get necessary information for Unified certification of educational administration system"
authors = ["weearc <qby19981121@gmail.com>"]
license = "AGPL-3.0-only"
readme = "readme.md"
keywords = ["ics", "cqu", "icalendar", "timetable", "auth"]
include = ["readme.md"]
repository = "https://github.com/weearc/cm-http-api"
packages = [
    { include = "cm-http-api" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/weearc/cm-http-api/issues"


[tool.poetry.dependencies]
python = "3.9.1"
selenium = "~3.141.0"
configparser = "^5.0.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-datadir = "^1.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
